Update the order in which debug attack steps are removed